Se ha adaptado el tamaño de algunas fuentes

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </div>
     </section>
     
-
+    <!-- Seccion de Informacion personal -->
     <section class="text-white bg-primary mb-0" id="about">
         <div class="container">
             <h2 class="text-uppercase text-center text-white" data-i18n="sobre_mi">Sobre mí</h2>
